--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,18 +10,15 @@ authors = [{name = "GISCE-TI, S.L."}]
 license = {file = "LICENSE"}
 readme = "README.md"
 requires-python = ">=3.6"
-
-[project.urls]
-homepage = "https://github.com/gisce/gh-release-downloader"
-repository = "https://github.com/gisce/gh-release-downloader"
-documentation = "https://github.com/gisce/gh-release-downloader#readme"
-
 dependencies = [
     "requests",
     "click"
 ]
 
-[tool.setuptools.entry_points]
-console_scripts = [
-    "gh-release-downloader = gh_release_downloader:main"
-]
+[project.scripts]
+gh-release-downloader = "gh_release_downloader:main"
+
+[project.urls]
+homepage = "https://github.com/gisce/gh-release-downloader"
+repository = "https://github.com/gisce/gh-release-downloader"
+documentation = "https://github.com/gisce/gh-release-downloader#readme"
