--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,7 +12,8 @@ readme = "README.md"
 requires-python = ">=3.6"
 dependencies = [
     "requests",
-    "click"
+    "click",
+    "semver"
 ]
 
 [project.scripts]
