--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,7 @@ build-backend = "setuptools.build_meta"
 
 [project]
 name = "gh-release-downloader"
-version = "0.5.0-rc1"
+version = "0.7.0"
 description = "A tool to download and manage assets from GitHub releases."
 authors = [{name = "GISCE-TI, S.L."}]
 license = {file = "LICENSE"}
